Massively extend stubbing abilities